force-app/main/default/objects/Spring_Sprint__c/fields/Duration_in_days__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_days__c</fullName>
    <formula>Start_Date__c -  End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration in days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>